Adding jobs route/template

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -26,6 +26,9 @@
               {{#link-to 'social' tagName='li'}}
                 {{#link-to 'social'}}<span>Social</span>{{/link-to}}
               {{/link-to}}
+              {{#link-to 'jobs' tagName='li'}}
+                {{#link-to 'jobs'}}<span>Social</span>{{/link-to}}
+              {{/link-to}}
     				</ul>
     			</nav>
         </div>
