--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -27,7 +27,7 @@
                 {{#link-to 'social'}}<span>Social</span>{{/link-to}}
               {{/link-to}}
               {{#link-to 'jobs' tagName='li'}}
-                {{#link-to 'jobs'}}<span>Social</span>{{/link-to}}
+                {{#link-to 'jobs'}}<span>Jobs</span>{{/link-to}}
               {{/link-to}}
     				</ul>
     			</nav>
